--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <li class="nav-item">
         <a class="nav-link" href="faq/index.html">FAQ</a>
       </li>
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="staff/index.html">Staff</a>
-      </li>
+      </li>-->
       <li class="nav-item">
         <a class="nav-link" href="schedule/index.html">Schedule</a>
       </li>
@@ -60,7 +60,7 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://reg.world.ac" data-proofer-ignore>Register</a>
+        <a class="btn btn-outline-primary" href="https://worldaffairsconference.github.io/reg/#/" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
@@ -82,11 +82,11 @@
     </div>
     <div class="text-center">
       This Year's Theme:
-      <h1 class="display-4">2020 Vision</h1>
+      <h1 class="display-4">20/20 Vision</h1>
     </div>
     <div class="text-center text-md-right">
       <h4>The Conference is</h4>
-      <h3><span id="countdown">Over!</span></h3>
+      <h3><span id="countdown"></span></h3>
     </div>
   </div>
 </div>
@@ -101,9 +101,9 @@
         <p>
           The World Affairs Conference (WAC) is Canada's oldest annual student-run current affairs conference. Annually held at Upper Canada College in Toronto, Canada, the World Affairs Conference connects over 1000 students, with a common interest in current affairs, from across North America.
         </p>
-        <p>
-          This year, WAC 2019's theme is <b>2020 Vision</b>: .......
-        </p>
+        <!--<p>
+          This year, WAC 2019's theme is <b>20/20 Vision</b>: .......
+        </p>-->
       </div>
     </div>
   </div>
@@ -144,7 +144,7 @@
 </div>
 <script type="text/javascript">
 
-  var wacdate = "1/30/2019"; //Countdown date in MM/DD/YYYY format (no 0's required)
+  var wacdate = "2/4/2019"; //Countdown date in MM/DD/YYYY format (no 0's required)
   function getTimeRemaining(endtime){
   	var t = Date.parse(endtime) - Date.parse(new Date());
   	var seconds = Math.floor( (t/1000) % 60 );
