--- a/plenaries/cleanup.html
+++ b/plenaries/cleanup.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Reconciliation and Indigenization | The World Affairs Conference</title>
-  <meta name="description" content="Cryptocurrency is an emerging technology changing the way we transact money. Or is it? Since the emergence of the first cryptocurrency (Bitcoin) in 2009, ban...">
+  <title>Startup Cleanup | The World Affairs Conference</title>
+  <meta name="description" content="Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -51,9 +51,9 @@
       <li class="nav-item">
         <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
-      </li>
+      </li>-->
       <li class="nav-item">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
@@ -63,7 +63,7 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://reg.world.ac" data-proofer-ignore>Register</a>
+        <a class="btn btn-outline-primary" href="https://worldaffairsconference.github.io/reg/#/" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
@@ -74,16 +74,11 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Reconciliation and Indigenization</h1>
-						<img class="img-fluid plenary-img" src="../img/plen/crypto.svg" alt="Data Daycare"/>
+						<h1>Startup Cleanup</h1>
+						<img class="img-fluid plenary-img" src="../img/wac_logo.svg" alt="Startup Cleanup"/>
 						<p class="card-text">
-							<p>The plenary of Reconciliation and Indigenization is meant to discuss about conflict left with Indigenous peoples over from the past of Canada’s colonial history. It should be recognized and accepted the reality of Canadian history, accepted how that history paralyzed Indigenous Peoples, and how it continues to subjugate Indigenous Peoples. Furthermore, the plenary will show a mass discussion on reconciliation and the future of it within the upcoming decade.
-            </p>
+							<p>Profit or Planet, the two most 'unrelated' economic topics a few decade ago, are now emergent as interrelated. While our economy remains relatively stable as the number of people living on the planet has experienced exponential growth in the past century, our planet is not ready to take the toll. Consequences of environment loss are dire, including scarcity of resources, loss of indigenous culture, lack of biodiversity, and the list goes on. Social entrepreneurship might be the solution to this problem, which is start-up companies that addresses social, cultural, or environmental issues. However, is that really enough? Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system? How do people fit into the controversial connection between profit and the planet? Be prepared to be caught in the crossfire between the debated relationship of entrepreneurship and environment at People, Planet, Profit.</p>
 
-          <p>But there are some questions we must ask, too. What is the role of Canadian society in Truth and Reconciliation? How have attitudes about the Indigenous changed since the abolishment of residential schools? What is the future relationship between the government of Canada and Indigenous communities in decade?
-          Our plenary prepares our generation - the first generation that will be fully immersed in this technology - for what we need to know to be prepared for the exponential increase of cryptocurrencies in the years to come.</p>
-
-						</p>
 						<p class="card-text">
 							More information on plenaries and programs are coming soon.
 						</p>
@@ -94,26 +89,26 @@
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jbrant.png" alt="Jennifer Brant">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/Doosterman.png" alt="Dennon Oosterman">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Jennifer Brant</h2>
-						Dr. Brant belongs to the Mohawk Nation with family ties to Six Nations of the Grand River Territory and Tyendinaga Mohawk Territory. She finished her PhD at Brock University and is currently an Assistant Professor at the Ontario Institute for Studies in Education, University of Toronto. Her work positions Indigenous literatures as educational tools to inspire empathy, compassion, healing, and wellness. Dr. Brant is also the co-editor of “Forever Loved: Exposing the Hidden Crisis of Missing and Murdered Indigenous Women and Girls in Canada”. Through her community work, teaching, research, and writing, she is dedicated to encouraging teacher candidates to engage in the Truth and Reconciliation Commission of canada’s Calls to Actions.  She is the 2018 recipient of the Canadian Society for the Study of Higher Education “George L. Geis Dissertation Award” as well. 
+						<h2 class="text-center text-md-left">Dennon Oosterman</h2>
+						Dennon Oosterman is known to be an innovator, inventor, leader, and entrepreneur. His Bachelor of Applied Science in Engineering Physics at the University of British Columbia and internships at Bell and Columbia Capital could not satisfy his need to provide to the environment. Dennon Oosterman is the Founder and CEO of ReDeTec, a company that develops recycling technology for 3D printers. He worked to develop the core technology, led all private and public funding efforts, and built his current team to what they are today. His dream is to empower businesses and educators with unlimited creative freedom through sustainable manufacturing. From research and development to product development and branding, building a business around innovative technology is what Oosterman does best.
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jdupuis.png" alt="Florian Kerschbaum">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ysheffi.jpg" alt="Yossi Sheffi">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Jenny Kay Dupuis</h2>
-						Born in Northern Ontario as a member of the Nipissing First Nation, Dr. Jenny Kay Dupuis is an educator, author, artist, and a consultant on Indigenous Issues. Her areas of work are namely leadership and diversity, as well as the importance of relationship building today. In 2016, she co-wrote her first children’s picture book titled I Am Not a Number which was about the struggles and traumas her Grandmother went through in a residential school. The book ultimately became one of the finalists for the 2017 Canadian Children’s Book Centre Awards. She was also awarded the 2017 J.S. Woodsworth Individual Leadership Award for Human Rights and Equity.
+						<h2 class="text-center text-md-left">Yossi Sheffi</h2>
+						Valentin Schmidis the business editor of the Epoch Times, an independent global news source headquartered in New York. His areas of expertise include global macroeconomic trends, financial markets, China, and Bitcoin. Before joining the paper in 2012, he worked as a portfolio manager for BNP Paribas, a retail banking company, in Amsterdam, London, Paris, and Hong Kong.
 					</div>
 				</div>
 			</div>
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
-					<a class="card-link" href="/plenaries"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
+					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
 				</p>
 			</div>
 		</div>
