--- a/plenaries/defiance.html
+++ b/plenaries/defiance.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Data Daycare | The World Affairs Conference</title>
-  <meta name="description" content="Cryptocurrency is an emerging technology changing the way we transact money. Or is it? Since the emergence of the first cryptocurrency (Bitcoin) in 2009, ban...">
+  <title>Popular Defiance | The World Affairs Conference</title>
+  <meta name="description" content="Hiroshima, Nagasaki, B-52s, tactical nuclear weapons, thermonuclear war–all these have been part of the lexicon of the modern world. As the 21st century prog...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -26,8 +26,8 @@
 	</style>
 </head>
 
-	
-	
+
+
 
 	<body>
 
@@ -51,9 +51,9 @@
       <li class="nav-item">
         <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
-      </li>
+      </li>-->
       <li class="nav-item">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
@@ -63,7 +63,7 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://reg.world.ac" data-proofer-ignore>Register</a>
+        <a class="btn btn-outline-primary" href="https://worldaffairsconference.github.io/reg/#/" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
@@ -74,18 +74,10 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Data Datcare</h1>
-						<img class="img-fluid plenary-img" src="../img/plen/crypto.svg" alt="Data Daycare"/>
+						<h1>Popular Defiance</h1>
+						<img class="img-fluid plenary-img" src="../img/wac_logo.svg" alt="Nuclear Weapons: Obsolete or the Future picture"/>
 						<p class="card-text">
-							<p>We are currently living in the “age of data”, where everything that surrounds us is linked to a data source and everything in our lives is captured digitally. The physical world around us has turned into raw information: internet, video, call data records, customer transactions, healthcare records, etc. 
-
-              We like to call it big data—and it is indeed getting bigger, growing exponentially with each passing day. Luckily, the opportunities to take this data and combine it with analytics to improve all aspects of our lives are also growing exponentially.
-
-              The increasing prevalence of big data, however, draws questions and controversy about the safety of our own personal data, with tremendous potential to be exploited with wide-ranging consequences.
-            </p>
-
-          <p>But there are some questions we must ask, too. How is automation impacting various sectors of the economy, from those where jobs are being destroyed to those where jobs are being created. How can society handle such a shift? Do we have the right public policy imperatives, and the right social infrastructure, to handle such shifts? What is the right ethical framework to make decisions about the deployment of automation/AI?
-          Our plenary prepares our generation - the first generation that will be fully immersed in this technology - for what we need to know to be prepared for the exponential increase of cryptocurrencies in the years to come.</p>
+							<p>With the emergence of the internet and social media as a method to spread political messages, we have seen, along with the polarization of viewpoints, the emergence of political movements on both the left and right that draw mass followings. This has escalated to the point where political thinkers and activists are elevated to near celebrity status. Furthermore, as of January 2018, according to the Pew Research Center, 42% of Canadians accessed news from social media at least once a day, a number that is rapidly growing. As use of social media becomes ever more ubiquitous in the coming decade, it will surely have a large impact on how we think, act, and vote.</p>
 
 						</p>
 						<p class="card-text">
@@ -98,25 +90,28 @@
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/agupta.png" alt="Arvind Gupta">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/agruzd.png" alt="Anatoliy Gruzd">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dr. Arvind Gupta</h2>
-						Arvind Gupta is Professor of Computer Science at the University of Toronto. He has served as President and Vice-Chancellor of UBC, and as the CEO and Scientific Director of Mitacs Inc. Arvind has published extensively on theoretical computer science, computational genomics, and national innovation strategies. 
-
-            Arvind has a record of accomplishment for initiatives that improve Canada’s productivity and competitiveness by successfully enhancing workforce skills through industry-academic partnerships. As the founder of Mitacs, he achieved success in interweaving graduate education with socioeconomic needs by bringing together 60 universities with more than 1,000 civil society partners. Most recently he co-founded Palette Skills Inc, a Federal not-for-profit dedicated to creating transition pathways to the knowledge economy for mid-career professionals whose careers are adversely being impacted by automation. 
-
-            Arvind was instrumental in creating the Pacific Institute for the Mathematical Sciences (PIMS) and the Banff International Research Station (BIRS). He is a Senior Fellow of the Brookfield Institute and serves on the Boards of the India-Canada Research Centre of Excellence (IC-IMPACTS), BIRS, the Fields Institute, the Canadian Statistical Sciences Institute, and SimTrec.
-
+						<h2 class="text-center text-md-left">Dr. Anatoliy Gruzd</h2>
+            Dr. Anatoliy Gruzd is a Canadian Research Chair in Social Media Data Stewardship and Associate Professor at the Ted Rogers School of Management at Ryerson University. He is also a Member of the Royal Society of Canada’s College of New Scholars, Artists and Scientists; a co-editor of a multidisciplinary journal on Big Data and Society; and a founding co-chair of the International Conference on Social Media and Society. Anatoliy is a leader in social media studies and established the first social media research laboratory in North America.
+            Dr. Gruzd examines how social media platforms are changing the ways in which people and organizations communicate, share information, conduct business and form communities, and how these changes impact society. Anatoliy and his team also develop new analytical tools and approaches for discovering and visualizing social media data and online networks. The broad aim of his initiatives is to advance the public’s understanding of the benefits and pitfalls of social media adoption.
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/fkerschbaum.png" alt="Florian Kerschbaum">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/dcoyne.png" alt="Deborah Coyne">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dr. Florian Kerschbaum</h2>
-						Florian Kerschbaum is an associate professor in the David R. Cheriton School of Computer Science at the University of Waterloo and executive director of the Waterloo Cybersecurity and Privacy Institute.  Before he worked as chief research expert at SAP in Karlsruhe, Germany and as a software architect at Arxan Technologies in San Francisco.  He holds a Ph.D. in computer science from the Karlsruhe Institute of Technology and a master's degree from Purdue University.  His research interests revolve around data security and privacy in machine learning, IoT and blockchains.  He is the inventor of more than 50 patents and one of only three authors worldwide that have two single author papers in the leading computer security conferences in the last ten years.
+						<h2 class="text-center text-md-left">Deborah Coyne</h2>
+						<p>Ms. Coyne is currently practicing law. In addition to the practice of law, Ms. Coyne is a long-time independent public policy consultant with extensive and wide-ranging experience in the development, implementation and application of public policy measures.
+              </p>
+            <p>In 1983, Ms. Coyne began her career as a lawyer with Blake, Cassels and Graydon in Toronto, specializing in labour law and litigation. She also spent two years teaching law at the University of Toronto and has worked on legal and policy matters in the areas of Health, Human Rights, assistance to disabled persons, national business issues, constitutional reform, and refugee and immigration adjudication.
+              </p>
+            <p>Ms. Coyne has served as a Policy Advisor and Analyst for various federal and Ontario Boards and Commissions. She has been a Board Member with the Canadian Immigration and Refugee Board in Toronto and Ottawa, and with the Health Professions and Health Insurance Appeal and Review Boards, both in Toronto. As such, she has gained deep insights into the functioning of public and quasi-judicial institutions, not only in terms of the implementation of their statutory mandates, but, as well, of their relationships with governments.
+              </p>
+            <p>Ms. Coyne has been very involved in the political process in Canada, having worked in policy research for a major political party and as a policy advisor for a provincial premier. She has also been a candidate for various political offices.
+              </p>
 					</div>
 				</div>
 			</div>
@@ -145,6 +140,5 @@
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/tether.min.js></script>
-
 	</body>
 </html>
