--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -48,9 +48,9 @@
       <li class="nav-item">
         <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
-      </li>
+      </li>-->
       <li class="nav-item">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
@@ -60,7 +60,7 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://reg.world.ac" data-proofer-ignore>Register</a>
+        <a class="btn btn-outline-primary" href="https://worldaffairsconference.github.io/reg/#/" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
@@ -81,7 +81,7 @@
             <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="../plenaries/china.html"><h4 class="card-title">The EU’s Midlife Crisis</h4></a>
+            <a href="../plenaries/eu.html"><h4 class="card-title">The EU’s Midlife Crisis</h4></a>
             <p class="card-text">What happened to get EU to this pivotal stage? What will be the long term impacts of crises affecting the EU, such as Brexit or the migrant situation? Will the EU endure as the strong political force it is today? </p>
           </div>
         </div>
@@ -95,7 +95,7 @@
             <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="../plenaries/crypto.html"><h4 class="card-title">Startup Cleanup</h4></a>
+            <a href="../plenaries/cleanup.html"><h4 class="card-title">Startup Cleanup</h4></a>
             <p class="card-text">How can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system? How do people fit into the controversial connection between profit and the planet?
 </p>
           </div>
@@ -110,7 +110,7 @@
             <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="../plenaries/drugs.html"><h4 class="card-title">Data Daycare</h4></a>
+            <a href="../plenaries/data.html"><h4 class="card-title">Data Daycare</h4></a>
               <p class="card-text">What is the right ethical framework to make decisions about the deployment of automation/AI? How should we think about such things? As we adopt new technologies, who is responsible for the impact of those technologies? </p>
           </div>
         </div>
@@ -124,7 +124,7 @@
             <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="../plenaries/earth.html"><h4 class="card-title">The Plight of Workers’ Rights</h4></a>
+            <a href="../plenaries/rights.html"><h4 class="card-title">The Plight of Workers’ Rights</h4></a>
             <p class="card-text">How do large corporations deal with smaller internal issues regarding workers’ rights within the companies most effectively? Has the democratic vaules of the workplace been reduced over the past few decades? </p>
           </div>
         </div>
@@ -138,7 +138,7 @@
             <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="../plenaries/feminism.html"><h4 class="card-title">Reconciliation and Indigenization</h4></a>
+            <a href="../plenaries/reconcil.html"><h4 class="card-title">Reconciliation and Indigenization</h4></a>
             <p class="card-text">What is the role of Canadian society in Truth and Reconciliation? How have attitudes about the Indigenous changed since the abolishment of residential schools? </p>
           </div>
         </div>
@@ -152,7 +152,7 @@
             <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="../plenaries/nuclear.html"><h4 class="card-title">Popular Defiance</h4></a>
+            <a href="../plenaries/defiance.html"><h4 class="card-title">Popular Defiance</h4></a>
             <p class="card-text">How has the power of social media impacted the current landscape of political thought and activism? Will the ability for unconventional and/or niche individuals to gain followings have a positive or negative impact on our world?
               </p>
           </div>
