--- a/plenaries/reconcil.html
+++ b/plenaries/reconcil.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>The Global Food Crisis | The World Affairs Conference</title>
-  <meta name="description" content="Humankind is growing, and we have a big problem. By the year 2050, the global population is expected to surpass 9 million people, with the majority being bor...">
+  <title>Reconciliation and Indigenization | The World Affairs Conference</title>
+  <meta name="description" content="Cryptocurrency is an emerging technology changing the way we transact money. Or is it? Since the emergence of the first cryptocurrency (Bitcoin) in 2009, ban...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -51,9 +51,9 @@
       <li class="nav-item">
         <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
-      </li>
+      </li>-->
       <li class="nav-item">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
@@ -63,7 +63,7 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://reg.world.ac" data-proofer-ignore>Register</a>
+        <a class="btn btn-outline-primary" href="https://worldaffairsconference.github.io/reg/#/" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
@@ -74,12 +74,16 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>The Plight of Workers’ Rights</h1>
-						<img class="img-fluid plenary-img" src="../img/plen/earth.png" alt="The Global Food Crisis picture"/>
+						<h1>Reconciliation and Indigenization</h1>
+						<img class="img-fluid plenary-img" src="../img/wac_logo.svg" alt="Data Daycare"/>
 						<p class="card-text">
-							<p>The Plight of Workers’ Rights is a plenary that generally focuses on democracy and its core values within the workplace. Essentially, this involves the powers and rights of workers when faced against large corporate employers. The name, itself, symbolizes and is representative of the ebb in workers’ rights with regards to these large corporations today. It also explicates the fact that many workers are victim to current prevalent issues within the work environment, and how some companies refuse to acknowledge or change policies as a result of this. Finally, the plenary relates toward the future based on the theme, 2020 Vision, and looks to provide an analysis of what democracy in the workplace will presumably look like over the next decade due to the inevitable development of technologies worldwide.
-                        </p>
+							<p>The plenary of Reconciliation and Indigenization is meant to discuss about conflict left with Indigenous peoples over from the past of Canada’s colonial history. It should be recognized and accepted the reality of Canadian history, accepted how that history paralyzed Indigenous Peoples, and how it continues to subjugate Indigenous Peoples. Furthermore, the plenary will show a mass discussion on reconciliation and the future of it within the upcoming decade.
+            </p>
 
+          <p>But there are some questions we must ask, too. What is the role of Canadian society in Truth and Reconciliation? How have attitudes about the Indigenous changed since the abolishment of residential schools? What is the future relationship between the government of Canada and Indigenous communities in decade?
+          Our plenary prepares our generation - the first generation that will be fully immersed in this technology - for what we need to know to be prepared for the exponential increase of cryptocurrencies in the years to come.</p>
+
+						</p>
 						<p class="card-text">
 							More information on plenaries and programs are coming soon.
 						</p>
@@ -90,17 +94,26 @@
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sblau.png" alt="Dr. Jennifer Sumner">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jbrant.png" alt="Jennifer Brant">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Shawna Bader Blau</h2>
-						Dr. Jennifer Sumner is currently a professor and lecturer in the department for Higher Education and Leadership at the Ontario Institute for Studies in Education at the University of Toronto. She received a bachelor's degree at the University of Toronto and went on to earn a diploma in agriculture and a PHD in rural studies both from the University of Guelph. Since then she has researched or taught in an astounding eight separate subjects at University of Toronto. She is an expert in the fields Sustainability, Food and sustainable food systems, Organic agriculture, Globalization, Rural communities/rural women and the civil commons and the social economy all of which pertain to important issues facing society and to this year’s theme of “Paradigm shifts”. Since 2005 she has written and co-edited four novels discussing environmental and agricultural sustainability policy, in addition she has received seven research grants for her work in sustainable food systems and how organic agriculture affects the rural economy.
+						<h2 class="text-center text-md-left">Jennifer Brant</h2>
+						Dr. Brant belongs to the Mohawk Nation with family ties to Six Nations of the Grand River Territory and Tyendinaga Mohawk Territory. She finished her PhD at Brock University and is currently an Assistant Professor at the Ontario Institute for Studies in Education, University of Toronto. Her work positions Indigenous literatures as educational tools to inspire empathy, compassion, healing, and wellness. Dr. Brant is also the co-editor of “Forever Loved: Exposing the Hidden Crisis of Missing and Murdered Indigenous Women and Girls in Canada”. Through her community work, teaching, research, and writing, she is dedicated to encouraging teacher candidates to engage in the Truth and Reconciliation Commission of canada’s Calls to Actions.  She is the 2018 recipient of the Canadian Society for the Study of Higher Education “George L. Geis Dissertation Award” as well. 
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jdupuis.png" alt="Florian Kerschbaum">
+					</div>
+					<div class="col-md-8">
+						<h2 class="text-center text-md-left">Jenny Kay Dupuis</h2>
+						Born in Northern Ontario as a member of the Nipissing First Nation, Dr. Jenny Kay Dupuis is an educator, author, artist, and a consultant on Indigenous Issues. Her areas of work are namely leadership and diversity, as well as the importance of relationship building today. In 2016, she co-wrote her first children’s picture book titled I Am Not a Number which was about the struggles and traumas her Grandmother went through in a residential school. The book ultimately became one of the finalists for the 2017 Canadian Children’s Book Centre Awards. She was also awarded the 2017 J.S. Woodsworth Individual Leadership Award for Human Rights and Equity.
 					</div>
 				</div>
 			</div>
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
-					<a class="card-link" href="/plenaries"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
+					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
 				</p>
 			</div>
 		</div>
