--- a/plenaries/rights.html
+++ b/plenaries/rights.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Startup Cleanup | The World Affairs Conference</title>
-  <meta name="description" content="Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system...">
+  <title>The Plight of Workers’ Rights | The World Affairs Conference</title>
+  <meta name="description" content="Humankind is growing, and we have a big problem. By the year 2050, the global population is expected to surpass 9 million people, with the majority being bor...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -51,9 +51,9 @@
       <li class="nav-item">
         <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
-      </li>
+      </li>-->
       <li class="nav-item">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
@@ -63,7 +63,7 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://reg.world.ac" data-proofer-ignore>Register</a>
+        <a class="btn btn-outline-primary" href="https://worldaffairsconference.github.io/reg/#/" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
@@ -74,10 +74,11 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Startup Cleanup</h1>
-						<img class="img-fluid plenary-img" src="../img/wac_logo.svg" alt="Startup Cleanup"/>
+						<h1>The Plight of Workers’ Rights</h1>
+						<img class="img-fluid plenary-img" src="../img/wac_logo.svg" alt="The Global Food Crisis picture"/>
 						<p class="card-text">
-							<p>Profit or Planet, the two most 'unrelated' economic topics a few decade ago, are now emergent as interrelated. While our economy remains relatively stable as the number of people living on the planet has experienced exponential growth in the past century, our planet is not ready to take the toll. Consequences of environment loss are dire, including scarcity of resources, loss of indigenous culture, lack of biodiversity, and the list goes on. Social entrepreneurship might be the solution to this problem, which is start-up companies that addresses social, cultural, or environmental issues. However, is that really enough? Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system? How do people fit into the controversial connection between profit and the planet? Be prepared to be caught in the crossfire between the debated relationship of entrepreneurship and environment at People, Planet, Profit.</p>
+							<p>The Plight of Workers’ Rights is a plenary that generally focuses on democracy and its core values within the workplace. Essentially, this involves the powers and rights of workers when faced against large corporate employers. The name, itself, symbolizes and is representative of the ebb in workers’ rights with regards to these large corporations today. It also explicates the fact that many workers are victim to current prevalent issues within the work environment, and how some companies refuse to acknowledge or change policies as a result of this. Finally, the plenary relates toward the future based on the theme, 2020 Vision, and looks to provide an analysis of what democracy in the workplace will presumably look like over the next decade due to the inevitable development of technologies worldwide.
+                        </p>
 
 						<p class="card-text">
 							More information on plenaries and programs are coming soon.
@@ -89,26 +90,17 @@
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/Doosterman.png" alt="Dennon Oosterman">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sblau.png" alt="Dr. Jennifer Sumner">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dennon Oosterman</h2>
-						Dennon Oosterman is known to be an innovator, inventor, leader, and entrepreneur. His Bachelor of Applied Science in Engineering Physics at the University of British Columbia and internships at Bell and Columbia Capital could not satisfy his need to provide to the environment. Dennon Oosterman is the Founder and CEO of ReDeTec, a company that develops recycling technology for 3D printers. He worked to develop the core technology, led all private and public funding efforts, and built his current team to what they are today. His dream is to empower businesses and educators with unlimited creative freedom through sustainable manufacturing. From research and development to product development and branding, building a business around innovative technology is what Oosterman does best.
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ysheffi.jpg" alt="Yossi Sheffi">
-					</div>
-					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Yossi Sheffi</h2>
-						Valentin Schmidis the business editor of the Epoch Times, an independent global news source headquartered in New York. His areas of expertise include global macroeconomic trends, financial markets, China, and Bitcoin. Before joining the paper in 2012, he worked as a portfolio manager for BNP Paribas, a retail banking company, in Amsterdam, London, Paris, and Hong Kong.
+						<h2 class="text-center text-md-left">Shawna Bader Blau</h2>
+						Dr. Jennifer Sumner is currently a professor and lecturer in the department for Higher Education and Leadership at the Ontario Institute for Studies in Education at the University of Toronto. She received a bachelor's degree at the University of Toronto and went on to earn a diploma in agriculture and a PHD in rural studies both from the University of Guelph. Since then she has researched or taught in an astounding eight separate subjects at University of Toronto. She is an expert in the fields Sustainability, Food and sustainable food systems, Organic agriculture, Globalization, Rural communities/rural women and the civil commons and the social economy all of which pertain to important issues facing society and to this year’s theme of “Paradigm shifts”. Since 2005 she has written and co-edited four novels discussing environmental and agricultural sustainability policy, in addition she has received seven research grants for her work in sustainable food systems and how organic agriculture affects the rural economy.
 					</div>
 				</div>
 			</div>
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
-					<a class="card-link" href="/plenaries"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
+					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
 				</p>
 			</div>
 		</div>
