--- a/keynote/index.html
+++ b/keynote/index.html
@@ -48,9 +48,9 @@
       <li class="nav-item">
         <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
-      </li>
+      </li>-->
       <li class="nav-item">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
@@ -60,7 +60,7 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://reg.world.ac" data-proofer-ignore>Register</a>
+        <a class="btn btn-outline-primary" href="https://worldaffairsconference.github.io/reg/#/" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
