--- a/plenaries/eu.html
+++ b/plenaries/eu.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Nuclear Weapons: Obsolete or the Future | The World Affairs Conference</title>
-  <meta name="description" content="Hiroshima, Nagasaki, B-52s, tactical nuclear weapons, thermonuclear war–all these have been part of the lexicon of the modern world. As the 21st century prog...">
+  <title>The EU&#39;s Midlife Crisis  | The World Affairs Conference</title>
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -51,9 +50,9 @@
       <li class="nav-item">
         <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
-      </li>
+      </li>-->
       <li class="nav-item">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
@@ -63,7 +62,7 @@
     </ul>
     <ul class="navbar-nav float-lg-right">
       <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://reg.world.ac" data-proofer-ignore>Register</a>
+        <a class="btn btn-outline-primary" href="https://worldaffairsconference.github.io/reg/#/" data-proofer-ignore>Register</a>
       </li>
     </ul>
   </div>
@@ -74,12 +73,11 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Nuclear Weapons: Obsolete or the Future</h1>
-						<img class="img-fluid plenary-img" src="../img/plen/nuclear.svg" alt="Nuclear Weapons: Obsolete or the Future picture"/>
+						<h1>The EU's Midlife Crisis</h1>
+						<img class="img-fluid plenary-img" src="../img/wac_logo.svg" alt="The EU's Midlife Crisis picture"/>
 						<p class="card-text">
-							<p>Hiroshima, Nagasaki, B-52s, tactical nuclear weapons, thermonuclear war–all these have been part of the lexicon of the modern world. As the 21st century progresses, are nuclear weapons a thing of the past or part of the strategic calculus for the future? Delivery systems, payloads, and bomb transportation have all advanced to such an extent that the use of nuclear weapons seems increasingly plausible. Has the celebrated “deterrent effect”–MAD, Mutually Assured Destruction–finally expired? What responsibility do international bodies have to regulate and control the proliferation of nuclear weaponry? As global tensions rise, the world must remain wary and ever vigilant.</p>
+							<p>The EU is fighting off a midlife crisis. With key issues such as Brexit and debt affecting member countries, the EU is facing a serious reckoning. Currently, they are at a crossroads that will dictate not only the future of millions, but also the direction of our new decade. How did the EU get here, and where will they go? </p>
 
-						</p>
 						<p class="card-text">
 							More information on plenaries and programs are coming soon.
 						</p>
@@ -90,30 +88,31 @@
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/jclearwater.jpg" alt="John Clearwater">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/thuizinga.jpg" alt="Todd Huizinga">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">John Clearwater</h2>
-						Dr. John Clearwater is a military-strategic analyst and the current COO at Visa Services Canada Inc. A recipient of the Queen’s Diamond Jubilee Medal, Dr. Clearwater is a world-renowned expert on Nuclear Weapons. Dr. Clearwater did his doctoral work at the War Studies Department of King’s College, London and published his thesis, now a university textbook, The Birth of Strategic Arms Control. Dr. Clearwater has written extensively on global affairs; his works include Canadian Nuclear Weapons and U.S Nuclear Weapons in Canada. In 2002, he was invited to North Korea to witness and discuss their Nuclear Weapons policies and employment strategies. He is an advisor to government, think tanks, academia, the military, and other international institutions.
+						<h2 class="text-center text-md-left">Todd Huizinga</h2>
+						Todd Huizinga is a former American diplomat who served for 20 years. Notably, Mr. Huizinga spearheaded US involvement at the prestigious 2011 Munich Security Conference. Following his diplomatic career, he co-established the Transatlantic Christian Council, a nonprofit organization which promotes civic virtue, limited government, and individual freedoms in Europe as well as North America. He is also an active public speaker, with appearances on worldwide media outlets such as the BBC. In 2016, Mr. Huizinga authored the book “The New Totalitarian Temptation”, which discusses EU reforms as well as the philosophical principles behind them. Currently, he is a senior research fellow at Calvin College in Grand Rapids, Michigan.
+
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/sjoshi.jpg" alt="Dr. Sharad Joshi">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/mpanezi.png" alt="Maria Panezi">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dr. Sharad Joshi</h2>
-						Dr. Sharad Joshi holds a PhD from the Graduate School of Public and International Affairs at the University of Pittsburgh. Currently, he works at the Middlebury Institute of International Studies at Monterey where he is the assistant professor of Nonproliferation and Terrorism Studies. As part of The Graduate School of International Policy and Management, he teaches several courses including: terrorism and weapons of mass destruction in South Asia and South-East Asia, and Policy Analysis. Dr. Joshi is also a research associate at the Canadian Nuclear Society as well as the Monterey Terrorism Research and Education Program where he has conducted focused research on the different aspects of terrorism in South Asia, as well as arms control issues in the region.
+						<h2 class="text-center text-md-left">Maria Panezi</h2>
+						Maria Panezi holds a PhD in law, and is an expert on the World Trade Organization. She has taught law and economics in universities around the world, and wrote her doctoral dissertation on transparency in the World Trade Organization. She is also an expert in trade and law internationally, which includes the European Union. She is currently a research fellow with the Centre for International Governance Innovation.
+
 					</div>
 				</div>
 			</div>
 			<div class="card card-body text-center mt-2">
 				<p class="card-text">
-					<a class="card-link" href="/plenaries"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
+					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
 				</p>
 			</div>
 		</div>
-		</br>
 		<footer class="footer text-center mt-3">
   <div class="container">
     <p>
