--- a/schedule/index.html
+++ b/schedule/index.html
@@ -76,7 +76,7 @@
       <div class="container">
   <div class="card card-body">
     <h1 class="text-center">WAC 2019 Schedule</h1>
-    <p class="text-center">(<a href="../files/schedule_2018.pdf">PDF copy</a>)</p>
+    <!--<p class="text-center">(<a href="../files/schedule_2018.pdf">PDF copy</a>)</p>-->
     <h2 class="text-center mt-2">Keynote Address</h2>
     <div class="table-responsive">
       <table class="table table-hover my-4">
